@@ -863,7 +863,8 @@ scid-4.1
 ------------
 - Added the display of arrows when several variations are available. The display can be toggled using the menu Options -> Moves -> Show arrows for variations (Thanks to Fulvio)
 - When playing a move already existing in a variation, the variation is automatically entered into. To add a new variation starting with the same move, the menu Edit-> Add variation must be used (Thanks to Fulvio)
-- Added undo feature (10 undos max). Shortcut is Ctrl-z.
+- Added undo feature (10 undos max). Shortcut is Ctrl-z. 
+    Coders : rollbacks are set by calling {sc_game undoPoint} in Tcl or sc_game_save_for_undo() in C++.
 - Fixes :
 ---------
 - entering comments for last move of a line was broken
